fix scroll on mobiles

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
 body {
   box-sizing: border-box;
   overflow:hidden;
-  overflow-x:hidden;
 }
 
 html {
@@ -56,7 +55,6 @@ button {
 .wrapper {
   margin: auto;
   max-width: 1220px;
-  overflow: hidden;
 }
 
 /* Main */
